--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
   <title>Task List</title>
-</head> 
+</head>
 
 <body>
   <div class="container">
@@ -21,54 +21,31 @@
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
-                  <input type="text" name="task" id="task" value="Walk the dog">
+                  <input type="text" name="task" id="task">
                   <label for="task">New Task</label>
                 </div>
+                <input type="submit" value="Add Task" class="btn">
+              </form>
             </div>
-            <input type="submit" value="Add Task" class="btn">
-            </form>
           </div>
           <div class="card-action">
             <h5 id="task-title">Tasks</h5>
+            <div class="input-field col s12">
+              <input type="text" name="filter" id="filter">
+              <label for="filter">Filter Tasks</label>
+            </div>
             <ul class="collection">
-              <li class="collection-item">
-                List Item
-                <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
-                </a>
-              </li> 
-              <li class="collection-item">
-                List Item
-                <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
-                </a>
-              </li> 
-              <li class="collection-item">
-                List Item
-                <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
-                </a>
-              </li>
-              <li class="collection-item">
-                List Item
-                <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
-                </a>
-              </li>
-              <li class="collection-item">
-                List Item
-                <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
-                </a>
-              </li>
+              <!-- <li class="collection-item">fdfds<a class="delete-item secondary-content"><i class="fa fa-remove"></i></a></li> -->
             </ul>
-            <a class="clear-tasks btn black" href="">Clear Tasks</a>
+            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="app.js"></script>
 </body>
